# webfortune

./: Cargo.toml  Dockerfile  README.md  configuration.ini  flake.nix  fortunes.csv
src/: main.rs
