[package]
name = "webfortune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"]}
csv = "1.3.0"
rand = "0.8.5"
rust-ini = "0.20.0"
serde = { version = "1.0.192", features = ["serde_derive"]}
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
